--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://VictorKevz.github.io/TaskHub/",
+  "homepage": "https://VictorKevz.github.io/Task-Manager/",
   "name": "task-hub",
   "private": true,
   "version": "0.0.0",
